# momento

./: .gitignore  CLAUDE.md  LICENSE  README.md  momento-architecture.html  momento-faq.md  momento-v1-tests.md  prd-momento-final-v2.md  pyproject.toml  setup.sh
docs/: README.md  momento-beyond-code.html  momento-faq.html  momento-faq.md  momento-roadmap.md  momento-simulation.html  momento-snippets-tests.md  momento-test-engineer.md  momento-tests.md  momento-v1-tests.md  prd-momento-audit.md  prd-momento-decay.md  prd-momento-final-v2.md  prd-momento-snippets.md  prd-momento-user-journeys.md  reference.md
docs/snippets/: example-daily-json.json  example-daily-markdown.md  example-daily-slack.md  example-daily-standup.md
hooks/: pre-push
src/momento/: __init__.py  audit.py  cli.py  db.py  identity.py  ingest.py  mcp_server.py  models.py  retrieve.py  setup_utils.py  snippet.py  (+4 more)
src/momento.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  mock_data.py  test_audit.py  test_cli.py  test_concurrency.py  test_continuity.py  test_cross_project.py  test_decay.py  test_dedup.py  test_identity.py  test_ingestion.py  test_mcp_server.py  test_restore.py  test_schema.py  test_search.py  test_setup_sh.py  test_setup_utils.py  test_size_limits.py  test_snippet_cli.py  test_snippet_edge.py  test_snippet_grouping.py  test_snippet_json.py  test_snippet_markdown.py  test_snippet_mcp.py  test_snippet_query.py  test_snippet_slack.py  test_snippet_standup.py  test_snippet_weekly.py  test_store.py  test_surface.py  test_tags.py
